# RebelSCRIBE

./: .gitignore  LICENSE  README.md  README_HYBRID.md  RebelSCRIBE_Completion_Roadmap.md  RebelSCRIBE_Development_Procedure.md  RebelSCRIBE_Feature_Checklist.md  RebelSCRIBE_Final_Goal_Tracking.md  RebelSCRIBE_Progress_Tracker.md  RebelSCRIBE_Task_Assignment_Template.md  RebelSCRIBE_Task_Assignments_Sprint_1.md  RebelSCRIBE_Tracking_README.md  RebelSCRIBE_Weekly_Progress_2025-03-19.md  RebelSCRIBE_Weekly_Progress_Template.md  Test5.rebelscribe  Test6.rebelscribe  Tom.rebelscribe  build-and-run.ps1  check_structure.py  config.yaml  debug_typescript_parser.py  document_object_model_update.md  generate_code_docs.py  integrate_with_rebelsuite.py  master_test_runner.ps1  progress.md  progressive_test_strategy.ps1  pyproject.toml  requirements.txt  run.ps1  run_adapter_tests.ps1  run_advanced_ai_tests.ps1  run_all_ui_tests.ps1  run_asset_management_integration.py  run_comprehensive_ui_tests.ps1  run_error_handler_demo.bat  run_error_handler_demo.ps1  run_error_handler_test.ps1  run_error_handler_tests.bat  run_error_handler_tests.ps1  (+28 more)
archive/: benchmark_report.html  comprehensive_ui_test_plan.md  progressive_test_plan.md  test_checklist.md  test_improvement_plan.md
backups/: config_20250311_211547.yaml
config/: README.md  ai_config.yaml  app_config.yaml  theme_config.yaml
coverage_reports/: coverage_log_20250312_231350.txt
docs/: README.md  api_reference.md  developer_guide.md  error_handling_guidelines.md  index.html  user_guide.md
documents/: 08daeb3a-de35-400f-b909-1a6fd1b617c1.json  1d2481fc-108a-4bb6-9512-7d7a4e82f2b0.json  2e621729-31c6-4a4c-ad87-f899b587edcf.json  35e149cc-722a-403b-abd3-990d76830db1.json  371c9435-e19d-42df-a2e7-566f806766e2.json  37caabe2-ef73-4ce0-b4db-2c060f7546a0.json  416aadd4-0be2-4992-8958-f16c7cdca701.json  4ab577df-72e7-4df4-89aa-6bde65f1746c.json  4e999867-395e-45f8-8643-8105df22a799.json  566dfb62-f6f9-4101-8a1d-c076bbfba3bb.json  5cfef8d9-a731-4773-89f2-e2ab14f3071b.json  63e5c57d-d72f-4651-8dad-01a61881670e.json  64037d90-8071-4c9c-b8c0-54cdb7c5d7d4.json  (+7 more)
examples/: README.md  (+3 more)
(+4282 files in other folders)
