[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebelscribe"
version = "0.1.0"
description = "AI-powered novel writing program inspired by Scrivener"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RebelSCRIBE Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Word Processors",
]
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-QScintilla>=2.14.0",
    "anthropic>=0.5.0",
    "openai>=1.0.0",
    "httpx>=0.24.1",
    "backoff>=2.2.1",
    "google-generativeai>=0.3.0",
    "dropbox>=11.36.0",
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.100.0",
    "python-docx>=0.8.11",
    "reportlab>=4.0.4",
    "markdown>=3.4.3",
    "beautifulsoup4>=4.12.2",
    "pyyaml>=6.0.0",
    "rich>=13.4.2",
    "tqdm>=4.66.1",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-qt>=4.2.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/rebelscribe/rebelscribe"
"Bug Tracker" = "https://github.com/rebelscribe/rebelscribe/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
